# celery-playground

./: .editorconfig  LICENSE  README.md  pyproject.toml
compose/: .env.template  compose.yaml
compose/broker/: broker.env
compose/flower/: flower.env
src/celery-playground/: __main__.py  celeryconfig.py  worker.py
src/celery-playground/workflow/: tasks.py
