[project]
name = "celery-playground"
version = "0.1.0"
description = "A playground to play with Celery, locally."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery-types==0.23.0",
    "celery[rabbitmq,redis]~=5.5.3",
]

[project.optional-dependencies]
dev = [
    "celery-types==0.23.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
]
lint = [
    "ruff>=0.12.8",
]

[tool.uv]
package = false

[tool.uv.build-backend]
module-root = "src"
